alignment issue in select outome only dropdown

--- a/src/styles/components/dropdown/_dropdown.scss
+++ b/src/styles/components/dropdown/_dropdown.scss
@@ -296,9 +296,6 @@
                     &.chosen-default {
                         span {
                             color: $dark-transparent42 !important;
-                            &:before {
-                                display: none;
-                            }
                         }
                     }
                     span {
